12.2  Bugfix
When resizing, the "Read more" link (News) no longer gets cut off.

--- a/styles/home.css
+++ b/styles/home.css
@@ -248,6 +248,12 @@ ul#products-ribbon li h2
 
 
 /*Responsive design*/
+@media screen and (max-width: 1620px)
+{
+    #news>div{
+        height:10em;
+    }
+}
 
 @media screen and (max-width: 1350px)
 {
